--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Assets/UnityChan/License/
 Assets/UnityChan/
+Assets/Plugins/UniTask/
